--- a/server/data/apps.json
+++ b/server/data/apps.json
@@ -693,5 +693,35 @@
                 "elementURL": "https://www.headliner.app/blog/2021/04/23/no-more-clipping-headliner-now-supports-the-soundbite-tag/"
             }
         ]
-    }
+    },
+    {
+        "appName": "CurioCaster",
+        "appType": "app",
+        "appUrl": "https://curiocaster.com/",
+        "appIconUrl": "CurioLogo64.png",
+        "platforms": ["Web"],
+        "supportedElements": [
+            {
+                "elementName": "Transcript",
+                "elementURL": "https://curiocaster.com/"
+            },
+            {
+                "elementName": "Funding",
+                "elementURL": "https://curiocaster.com/"
+            },
+            {
+                "elementName": "Chapters",
+                "elementURL": "https://curiocaster.com/"
+            },
+            {
+                "elementName": "Search",
+                "elementURL": "https://curiocaster.com/"
+            },           
+            {
+                "elementName": "Value",
+                "elementURL": "https://curiocaster.com/"
+            }
+            
+        ]
+    },
 ]
